# quicksight-tests-backend

./: .gitignore  Dockerfile  Makefile  bandit.yaml  docker-compose.yml  pyproject.toml  pytest.ini
src/: __init__.py  main.py
src/core/: settings.py
src/providers/: quicksight.py
tests/: test_main.py
